Responsive design bug squashing

--- a/index.css
+++ b/index.css
@@ -133,7 +133,7 @@ select:hover {
   }
 }
 
-@media only screen and (max-width: 754px) {
+@media only screen and (max-width: 757x) {
   h1 {
     font-size: 60px;
     font-weight: 200;
